faq show more spacing and line height fix

--- a/styles/components/_faq-main-xs.scss
+++ b/styles/components/_faq-main-xs.scss
@@ -6,7 +6,7 @@
                 color: $fn-dark;
                 padding-left: 2px;
                 font-size: 2.4rem;
-                line-height:2.8rem;
+                line-height:1.2;
             }
         }
 
