--- a/styles/components/_faq-main.scss
+++ b/styles/components/_faq-main.scss
@@ -22,7 +22,7 @@ article.faq-article {
             font-size: 2rem;
             color: $fn-dkgrey;            
             letter-spacing: 2px;
-            line-height: 2.4rem;
+            line-height: 1.2;
             font-weight: $fn-bold-weight;
             position: absolute;
             text-transform: uppercase;
